fix(home): Comparison Section Gap Bottom Whitespace Reduced

--- a/src/modules/Dashboard/modules/landing/pages/LandingPage.module.css
+++ b/src/modules/Dashboard/modules/landing/pages/LandingPage.module.css
@@ -348,6 +348,10 @@
   }
 }
 
+.comparisonGridSection {
+  padding-bottom: 0px;
+}
+
 .camparison {
   display: flex;
   flex-direction: column;
